fixed anchor top spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,12 @@ GENERAL
 
 body {
   font-family: Lucida Sans Unicode;
-  margin-top: 130px;
 }
 
 .wrapper {
   max-width: 940px;
   margin: 0 auto;
-  padding: 20px 5%;
+  padding: 20px 5% 100px 5%;
 }
 
 a {
@@ -23,8 +22,12 @@ img {
 
 h3 {
   margin: 0 0 1em 0;
+  position: relative;
 }
 
+h3 a{
+  position:absolute; 
+}
 
 
 /**********************************
@@ -33,7 +36,7 @@ HEADING
 
 header {
   float: left;
-  margin: 0 0 30px 0;
+  /* margin: 0 0 30px 0; */
   padding: 5px 0 0 0;
   width: 100%;
   position: fixed;
